--- a/lambregs_ximera/knmtc_1dim_EVRB.tex
+++ b/lambregs_ximera/knmtc_1dim_EVRB.tex
@@ -23,8 +23,10 @@ x(t)=pt^2+qt+r
 Aan de constanten $p$, $q$ en $r$ is deze formule kan een fysische betekenis gegeven worden. Dee snelheid is de afgeleide van deze plaatsfunctie en de versnelling komt overeen met de tweede afgeleide. Dit levert: 
 
 \[
+\begin{array}{rl}
 v(t)&=\frac{dx}{dt}=2pt+q\\
-a(t)&=\frac{d^2x}{dt^2}=2p\nonumber
+a(t)&=\frac{d^2x}{dt^2}=2p%\nonumber
+\end{array}
 \]
 
 Omdat de versnelling constant is, halen we uit de laatste regel dat $a(t)=a=2p\Leftrightarrow p=\frac{a}{2}$. Als we met $v_0$ de snelheid op tijdstip $t=0$ voorstellen ($v_0=v(0)$) en $t=0$ invullen, dan vinden we dat $q=v_0$. De constante $q$ stelt dus de beginsnelheid voor. Als we vervolgens met $x_0$ de positie op tijdstip $t=0$ voorstellen en $t=0$ invullen, dan vinden we dat $r=x_0$. De constante $r$ stelt dus de beginpositie voor.
@@ -33,7 +35,7 @@ Omdat de versnelling constant is, halen we uit de laatste regel dat $a(t)=a=2p\L
 \begin{theorem}
 De plaatsfunctie $x(t)$ en de snelheidsfunctie $v(t)$ van een EVRB met versnelling $a$ worden gegeven door:
 \[
-\begin{array}
+\begin{array}{rcl}
 x(t)&=&x_0+v_0t+\frac{1}{2}at^2\\
 v(t)&=&v_0+at
 \end{array}
@@ -44,8 +46,11 @@ Hierin is $x_0$ de \textit{beginpositie} en $v_0$ de \textit{beginsnelheid}. Ze 
 Indien de beschrijving van de beweging niet op $t=0$ start maar op een gegeven tijdstip $t_0$, dan wordt in de beschrijving $t$ vervangen door $\Delta t= t-t_0$, de verstreken tijd vanaf het begintijdstip $t_0$. De plaatsfunctie en zijn afgeleide worden dan een klein beetje ingewikkelder:
 
 \[
+\begin{array}{rcl}
 x(t)&=&x_0+v_0(t-t_0)+\frac{1}{2}a(t-t_0)^2\\
 v(t)&=&v_0+a(t-t_0)
+	\end{array}
+
 \]
 
 Met de functies kan je de volgende formule voor de gemiddelde snelheid van een EVRB aantonen:%\footnote{Het formuletje is handig te gebruiken in veel vraagstukken door gebruik te maken van $\Delta x=\overline{v}\Delta t$.} 
