--- a/lambregs_ximera/knmtc_1dim_verticale_worp.tex
+++ b/lambregs_ximera/knmtc_1dim_verticale_worp.tex
@@ -47,7 +47,7 @@ De beweging is opgebouwd uit twee verschillende soorten bewegingen. Het eerste s
 Omdat we weten hoe ver de bol moet vallen voordat hij het wateroppervlak bereikt, kunnen we zowel de tijd die de bol hiervoor nodig heeft als de snelheid waarmee de bol het wateroppervlak raakt, bepalen. We kiezen een as naar beneden zodat -- omdat de snelheid in deze richting toeneemt -- de versnelling positief is en gelijk aan de valversnelling $g$ (toch voor het eerste stuk). De beginsnelheid van de bol is nul omdat hij vanuit rust wordt losgelaten. Voor de tijd vinden we:
 
 \[
-x_1=\frac{1}{2}gt^2\quad\Rightarrow\quad t_1&=&\sqrt{\frac{2x_1}{g}}
+x_1=\frac{1}{2}gt^2\quad\Rightarrow\quad t_1=\sqrt{\frac{2x_1}{g}}
 \]
 
 Met de tijd\footnote{We zouden de tijd met het gevonden formuletje kunnen uitrekenen en met het getalletje dat we vinden verder rekenen. Maar met het formuletje verder werken -- algebra\"isch of symbolisch -- is toch o zo veel knapper en van toepassing voor \'alle boten en niet enkel voor een boot waarvoor het dek zich $4,0$ meter boven het wateroppervlak bevindt. Bovendien is het ``echte'' fysica omdat je een ``model'' uitwerkt en niet een rekensommetje oplost...} kunnen we de snelheid op het wateroppervlak vinden.
@@ -59,7 +59,7 @@ v_1=gt_1\nonumber=g\sqrt{\frac{2x_1}{g}}\nonumber=\sqrt{2gx_1}
 Onder water, in het tweede stuk, beweegt de kogel met deze snelheid gedurende de resterende tijd: $6,0$ seconden min de tijd $t_1$ (\ref{tijd_boordschip}) die de kogel nodig had om te vallen. De afstand die de bol onder water aflegt, vinden we met de eenvoudige formuletjes van een ERB\footnote{Opmerking, een ERB is een speciaal geval van een EVRB. Een ERB heeft als constante versnelling $a=0$.}. We substitueren ook vergelijkingen (\ref{tijd_boordschip}) en (\ref{snelheid_boordschip}).
 
 \[
-\begin{array}
+\begin{array}{rcl}
 \Delta x&=&\overline{v}\cdot\Delta t\\
 &\Downarrow&\\
 x_2-x_1&=&v_1(t_2-t_1)\\
@@ -72,7 +72,7 @@ x_2-x_1&=&v_1(t_2-t_1)\\
 De gemiddelde snelheid vinden we door de totale afgelegde weg te delen door de totale benodigde tijd. Andere formuletjes zoals $\overline{v}=\frac{v_1+v_2}{2}$ zijn niet van toepassing omdat het helemaal niet over \'e\'en EVRB gaat waar dit formuletje geldt omdat de snelheid mooi lineair toeneemt. Hier gebeurt dat enkel in het eerste stuk en worden de verschillende snelheden niet even lang aangehouden zodat ze een verschillend aandeel hebben in de totale benodigde tijd.
 
 \[
-\begin{array}
+\begin{array}{rcl}
 \overline{v}_{02}=\frac{\Delta x}{\Delta t}=\frac{x_2}{t_2}&=&\frac{\sqrt{2gx_1}t_2-x_1}{t_2}\\
 &=&\sqrt{2gx_1}-\frac{x_1}{t_2}\\
 &=&8,2\rm\,m/s
