--- a/lambregs_ximera/ae_intro.tex
+++ b/lambregs_ximera/ae_intro.tex
@@ -6,8 +6,8 @@
 \begin{document}
 	\author{Bart Lambregs}
 	\xmtitle{Inleiding}{}
-    \xmsource
-    \xmsource
+    \xmsource\xmuitleg
+    \xmsource\xmuitleg
 
 
 	%% \chapter{Arbeid \& Energie}
