--- a/lambregs_ximera/ae_pot_gravitationele_algemeen.tex
+++ b/lambregs_ximera/ae_pot_gravitationele_algemeen.tex
@@ -6,7 +6,7 @@
 \begin{document}
 	\author{Bart Lambregs}
 	\xmtitle{Gravitationele potentiële energie, algemeen}{}
-    \xmsource
+    \xmsource\xmuitleg
 
 
 	\subsection{Gravitationele potentiële energie, algemeen}
