--- a/lambregs_ximera/glvn_golven_kenmerken.tex
+++ b/lambregs_ximera/glvn_golven_kenmerken.tex
@@ -6,7 +6,7 @@
 \begin{document}
 	\author{Bart Lambregs}
 	\xmtitle{Golven en kenmerken}{}
-    \xmsource
+    \xmsource\xmuitleg
 
 	%%%\section{Golven \& kenmerken}
 	
