--- a/lambregs_ximera/glvn_periodieke_golven.tex
+++ b/lambregs_ximera/glvn_periodieke_golven.tex
@@ -6,7 +6,7 @@
 \begin{document}
 	\author{Bart Lambregs}
 	\xmtitle{Periodieke golven}{}
-    \xmsource
+    \xmsource\xmuitleg
 
 
 	%%%\section{Periodieke golven}
