--- a/lambregs_ximera/grvt_satellietbanen.tex
+++ b/lambregs_ximera/grvt_satellietbanen.tex
@@ -6,7 +6,7 @@
 \begin{document}
 	\author{Bart Lambregs}
 	\xmtitle{Satellietbanen}{}
-    \xmsource
+    \xmsource\xmuitleg
 
 
 	%%%\section{Satellietbanen}
