--- a/lambregs_ximera/hrmn_harmonische_oscillator.tex
+++ b/lambregs_ximera/hrmn_harmonische_oscillator.tex
@@ -6,7 +6,7 @@
 \begin{document}
 	\author{Bart Lambregs}
 	\xmtitle{De harmonische oscillator}{}
-    \xmsource
+    \xmsource\xmuitleg
 
 
 	%% \chapter{Harmonische trillingen}
