--- a/lambregs_ximera/knmtc_1dim_verticale_worp.tex
+++ b/lambregs_ximera/knmtc_1dim_verticale_worp.tex
@@ -6,7 +6,7 @@
 \begin{document}
 	\author{Bart Lambregs}
 	\xmtitle{Verticale worp}{}
-    \xmsource
+    \xmsource\xmuitleg
 
 
 
@@ -24,8 +24,15 @@ Strikt genomen verschilt de valversnelling van plaats tot plaats op de aarde, ma
 \[g=9,81\rm\,m/s^2.\]
 Omdat de verticale worp een EVRB is, kunnen we de formules (\ref{x(t)0}) en (\ref{v(t)0}) gebruiken om een valbeweging te beschrijven. Voor de versnelling $a$ nemen we dan $a=g$ of $a=-g$ al naargelang de oriëntatie van de coördinaatas.
 
-\clearpage
-%%\newpage
+% \begin{quickquestion}
+
+% Als je een tennisbal in de lucht gooit, op welk(e) moment(en) is de versnelling \(0\)? Op welk(e) moment(en) is de snelheid \(0\)? 
+
+% \end{quickquestion}
+
+% \begin{quickquestion}
+% Leg de fysische betekenis uit indien de richting van de snelheidsvector en versnellingsvector tegengesteld zijn. Wat indien ze dezelfde richting hebben?
+% \end{quickquestion}
 
 
 \begin{exercise}
@@ -85,7 +92,7 @@ De gemiddelde snelheid vinden we door de totale afgelegde weg te delen door de t
 
 \begin{expandable}{youtube}{Een universiteitscollege over de leerstof van dit hoofdstuk.}
 
-	\youtube{https://youtu.be/LMF82fRIWWQ?list=PLaLOVNqqD-2HUv0qoYzSj0SBOIO_pLtW4}
+	\youtube{https://youtu.be/q9IWoQ199_o}
 
 
 \end{expandable}
