--- a/preamble.tex
+++ b/preamble.tex
@@ -1251,3 +1251,15 @@
         \renewcommand{\xmorganisatienaam}{{\smaller Gebaseerd op eigen cursus Bart Lambregs}}
     }
 }
+
+
+\providecommand{\xmuitleg}{
+\begin{remark}
+Deze open-source cursus is in ontwikkeling. Leerkrachten en leerlingen die van dit materiaal gebruik maken kunnen eenvoudig fouten/verbetering/... melden:
+\begin{itemize}
+    \item  via de 'wijzig' knop kan je zelf kleine fouten en typo's aanpassen. \href{https://wiskunde.opmaat.org/website/inhoud/welkom/doe-mee}{(extra uitleg)}
+    \item een mail sturen naar info@wiksunde.opmaat.org 
+\end{itemize}
+Dit materiaal wordt ontwikkeld als open-source project via \href{https://natuurkundeopmaat.zulipchat.com/login/}{zulip}. 
+\end{remark}
+}
