--- a/lambregs_ximera/ae_niet_constante_kracht.tex
+++ b/lambregs_ximera/ae_niet_constante_kracht.tex
@@ -6,7 +6,7 @@
 \begin{document}
 	\author{Bart Lambregs}
 	\xmtitle{Arbeid geleverd door een niet-constante kracht}{}
-    \xmsource
+    \xmsource\xmuitleg
 
 
 
