--- a/lambregs_ximera/ae_pot_referentiepunt.tex
+++ b/lambregs_ximera/ae_pot_referentiepunt.tex
@@ -6,7 +6,7 @@
 \begin{document}
 	\author{Bart Lambregs}
 	\xmtitle{Referentiepunt van de potentiële energie}{}
-    \xmsource
+    \xmsource\xmuitleg
 
 
 
