--- a/lambregs_ximera/ae_theorema.tex
+++ b/lambregs_ximera/ae_theorema.tex
@@ -6,7 +6,7 @@
 \begin{document}
 	\author{Bart Lambregs}
 	\xmtitle{Het arbeid-energietheorema}{}
-    \xmsource
+    \xmsource\xmuitleg
 
 
 	%%%\section{Het arbeid-energietheorema}
