--- a/lambregs_ximera/grvt_kepler.tex
+++ b/lambregs_ximera/grvt_kepler.tex
@@ -6,7 +6,7 @@
 \begin{document}
 	\author{Bart Lambregs}
 	\xmtitle{De wetten van Kepler}{}
-    \xmsource
+    \xmsource\xmuitleg
 
 	
 %%%\section{De wetten van Kepler}
