--- a/lambregs_ximera/knmtc_1dim_ERB.tex
+++ b/lambregs_ximera/knmtc_1dim_ERB.tex
@@ -6,7 +6,7 @@
 \begin{document}
 	\author{Bart Lambregs}
 	\xmtitle{Eenparige rechtlijnige beweging}{}
-    \xmsource
+    \xmsource\xmuitleg
 
 
 
