--- a/lambregs_ximera/knmtc_1dim_EVRB_calculus.tex
+++ b/lambregs_ximera/knmtc_1dim_EVRB_calculus.tex
@@ -6,7 +6,7 @@
 \begin{document}
 	\author{Bart Lambregs}
 	\xmtitle{Eenparige versnelde rechtlijnige beweging}{}
-    \xmsource
+    \xmsource\xmuitleg
 
 
 
@@ -49,8 +49,7 @@ Indien de beschrijving van de beweging niet op $t=0$ start maar op een gegeven t
 \begin{array}{rcl}
 x(t)&=&x_0+v_0(t-t_0)+\frac{1}{2}a(t-t_0)^2\\
 v(t)&=&v_0+a(t-t_0)
-	\end{array}
-
+\end{array}
 \]
 
 Met de functies kan je de volgende formule voor de gemiddelde snelheid van een EVRB aantonen:%\footnote{Het formuletje is handig te gebruiken in veel vraagstukken door gebruik te maken van $\Delta x=\overline{v}\Delta t$.} 
@@ -66,12 +65,46 @@ Met de functies kan je de volgende formule voor de gemiddelde snelheid van een E
 Blijkbaar houdt het eenparig toenemen van de snelheid in dat we het rekenkundig gemiddelde kunnen gebruiken voor de gemiddelde snelheid.
 
 
+
+% \begin{quickquestion*}
+% \begin{itemize}
+% 	\item Op het moment\(t_1\) de snelheid gelijk aan nul, is de versnelling dan ook gelijk aan nul? 
+% 	\item Op het moment\(t_1\) de vernelling gelijk aan nul, is de snelheid dan ook gelijk aan nul? 
+% 	\item Als een auto vertraagd, is de versnelling dan negatief? 
+% \end{itemize}
+% \end{quickquestion*}
+
 \begin{image}
 
 \includegraphics[width=\textwidth]{EVRB_grafieken}
 %\includegraphics[height=\textheight]{EVRB_grafieken}
 \end{image}
 \captionof{figure}{Grafieken van een EVRB}
+
+
+
+
+\begin{tikzpicture}[scale=5]
+	% Axes
+	\draw[->] (-0.05,0) -- (1.1,0) node[right] {$t(s)$};
+	\draw[->] (0,-0.05) -- (0,1.1) node[above] {$v(s)$};
+  
+	% Grid lines (optional)
+	\draw[very thin,color=gray!30] (0,0) grid (1,1);
+  
+	% Identity function
+	\draw[thick,blue,domain=0:1] plot(\x,\x);
+	\draw[thick,blue,domain=0:1] plot(\x,{pow(\x,2)});
+	\draw[thick,blue,domain=0:1] plot(\x,{pow(\x,1/2)});
+	% \draw[thick,red,domain=0:1] plot(\x,{pow(\x,3)});
+	% \draw[thick,green,domain=0:1] plot(\x,{pow(\x,1/3)});
+	\draw[thick,blue,domain=0:1] plot(\x,{pow(\x,4)});
+	\draw[thick,blue,domain=0:1] plot(\x,{pow(\x,1/4)});
+  
+
+\end{tikzpicture}
+
+
 
 
 \begin{exercise}
