--- a/lambregs_ximera/knmtc_1dim_begrippen.tex
+++ b/lambregs_ximera/knmtc_1dim_begrippen.tex
@@ -6,21 +6,15 @@
 \begin{document}
 	\author{Bart Lambregs}
 	\xmtitle{Basisbegrippen}{}
-    \xmsource
+    \xmsource\xmuitleg
 
 
-\begin{remark}
-	Deze open-source cursus is in ontwikkeling. Leerkrachten en leerlingen die van dit materiaal gebruik maken kunnen eenvoudig fouten/verbetering/... melden. 
-
-	\begin{itemize}
-		\item Via de 'wijzig' knop kan je kleine fouten en typo's zelf aanpassen. \href{https://wiskunde.opmaat.org/website/inhoud/welkom/doe-mee}{stappenplan}
-		\item Mailen naar info@wiksunde.opmaat.org 
-		\item Via 
-	\end{itemize}
-\end{remark}
 
 
-\subsection{Positie en plaatsfunctie}
+
+
+
+\subsection*{Positie en plaatsfunctie}
 
 De beweging van een puntmassa kan beschreven worden door de positie in functie van de tijd weer te geven. De \emph{plaatsfunctie} $x(t)$ geeft voor elk tijdstip \(t\) de positie \(x\) waar de puntmassa zich bevindt. Een coördinaatas\footnote{Een coördinaatas is een as van een cartesiaans assenstelsel, met een oorsprong en een oriëntatie.} bepaald de positie \(x\). De variabele \(t\) staat symbool voor de tijd. De notatie voor de positie op tijdstip $t_1$ is: 
 
@@ -54,7 +48,7 @@ Zo is de verplaatsing van de auto in de figuur tussen de tijdstippen $t_0$ en $t
 %%%\newline
 Let op, de verplaatsing hoeft niet noodzakelijk gelijk te zijn aan de \emph{afgelegde weg} tussen de twee bijbehorende tijdstippen. Als je een rondje hebt gelopen op de atletiekpiste en terug aan start staat is je (netto) verplaatsing nul, maar heb je wel degelijk afstand afgelegd.
 
-\subsection{Gemiddelde snelheid}
+\subsection*{Gemiddelde snelheid}
 
 % gemiddelde snelheid als je een rondje loopt is nu nul; dat moet miss benoemd worden 
 
@@ -74,7 +68,7 @@ In de figuur is de gemiddelde snelheid van de auto tussen de tijdstippen $t_1$ e
 
 
 
-\subsection{Gemiddelde versnelling}
+\subsection*{Gemiddelde versnelling}
 
 Ook de snelheid kan veranderen in de tijd. Dit ken je uit het dagelijks leven als versnellen of vertragen.
 
@@ -91,7 +85,7 @@ De eenheid van versnelling is meter per seconde, per seconde -- wat meter per se
 Kan je uitleggen wat de eenheid meter per seconde, per seconde betekent? 
 \end{denkvraag}
 
-\subsection{Ogenblikkelijke snelheid}
+\subsection*{Ogenblikkelijke snelheid}
 
 De plaatsfunctie \(x{t}\) kent op elke tijdstip \(t\) een positie toe aan een voorwerp. Op dezelfde manier zou je op elk tijdstip de snelheid willen kennen. 
 
@@ -132,7 +126,7 @@ Grafisch kan je de afgeleide terugvinden als de richtingscoöefficiënt van de r
 	Het woord 'ogenblikkelijk' mag je weglaten. Wanneer we het over snelheid hebben, bedoelen we vanaf nu steeds ogenblikkelijke snelheid.
 \end{remark}
 
-\subsection{Ogenblikkelijke versnelling}
+\subsection*{Ogenblikkelijke versnelling}
 
 Voor een ogenblikkelijke verandering van de snelheid maken we eenzelfde redenering als voor de ogenblikkelijke verandering van de positie.
 
