--- a/lambregs_ximera/knmtc_1dim_intro.tex
+++ b/lambregs_ximera/knmtc_1dim_intro.tex
@@ -6,7 +6,7 @@
 \begin{document}
 	\author{Bart Lambregs}
 	\xmtitle{Inleiding}{}
-    \xmsource
+    \xmsource\xmuitleg
 
 	%% \chapter{Eendimensionale bewegingen}
 
