--- a/lambregs_ximera/nwtn_derde_beginsel.tex
+++ b/lambregs_ximera/nwtn_derde_beginsel.tex
@@ -6,7 +6,7 @@
 \begin{document}
 	\author{Bart Lambregs}
 	\xmtitle{Het derde beginsel van Newton}{}
-    \xmsource
+    \xmsource\xmuitleg
 
 	% %%%\section{Het derde beginsel van Newton}
 
