--- a/lambregs_ximera/nwtn_traagheid.tex
+++ b/lambregs_ximera/nwtn_traagheid.tex
@@ -6,7 +6,7 @@
 \begin{document}
 	\author{Bart Lambregs}
 	\xmtitle{Inleiding}{}
-    \xmsource
+    \xmsource\xmuitleg
 
 	
 	%%%\section{De wet van de traagheid}
