1dim_begrippen: herformulering

--- a/lambregs_ximera/knmtc_1dim_begrippen.tex
+++ b/lambregs_ximera/knmtc_1dim_begrippen.tex
@@ -12,29 +12,33 @@
 	%%%\section{Enkele begrippen}
 	\subsection{Positie en plaatsfunctie}
 	
-	Het beschrijven van de beweging van een puntmassa kunnen we doen door de positie in de ruimte te geven in functie van de tijd. We kunnen m.a.w. een functie gebruiken die de plaats in functie van de tijd geeft. We noemen deze functie de \emph{plaatsfunctie} $x(t)$. $x$ staat voor de positie op een co\"ordinaatas\footnote{Een co\"ordinaatas is een as van een cartesiaans assenstelsel, met een oorsprong en een ori\"entatie.} en $t$ is de variabele die symbool staat voor de tijd\footnote{In de fysica gebruiken we de wiskunde als `taal' om de wetmatigheden van de natuur in uit te drukken. Wiskundige variabelen en objecten zoals functies krijgen nu een fysische betekenis. $x(t)$ is dus niets anders dan een functie $f(x)$ of $y(x)$ zoals je die in wiskunde kent. Alleen nemen wij nu niet voor de onafhankelijke variabele het symbool $x$ maar het symbool $t$ omdat deze symbool moet staan voor de tijd. En voor het symbool $f$ gebruiken wij nu het symbool $x$ omdat de beeldwaarden van de functie nu als betekenis een positie op een co\"ordinaatas hebben.}. Een notatie voor een bepaalde posities \footnote{Natuurlijk kan de index 1 ook vervangen worden door andere indices. Voorbeelden zijn $x_0=x(t_0)$ en $x_2=x(t_2)$.} op de co\"ordinaatas op een bepaald tijdstip $t_1$, is:
+	De beweging van een puntmassa wordt beschreven door haar positie in de ruimte als functie van de tijd, of dus door een \textit{functie} die de \textbf{plaats} weergeeft in functie van de \textbf{tijd}. Deze functie noemen we de \textbf{plaatsfunctie} $x = x(t)$. 
+	Bij een ééndimensionale beweging is $x$ een getal, namelijk de positie op een co\"ordinaatas
+	\footnote{Een co\"ordinaatas is een as van een cartesiaans assenstelsel, met een oorsprong en een ori\"entatie.} 
+	en $t$ is de variabele die symbool staat voor de tijd
+	\footnote{In de fysica gebruiken we de wiskunde als `taal' om de wetmatigheden van de natuur in uit te drukken. Wiskundige variabelen en objecten zoals functies krijgen nu een fysische betekenis. $x(t)$ is dus niets anders dan een functie $f(x)$ of $y(x)$ zoals je die in wiskunde kent. Alleen nemen wij nu niet voor de onafhankelijke variabele het symbool $x$ maar het symbool $t$ omdat deze symbool moet staan voor de tijd. En voor het symbool $f$ gebruiken wij nu het symbool $x$ omdat de beeldwaarden van de functie nu als betekenis een positie op een co\"ordinaatas hebben.}
+	. 
+	Met een welbepaald tijdstip $t_1$ 
+	\footnote{Natuurlijk kan de index 1 ook vervangen worden door andere indices. Voorbeelden zijn $x_0=x(t_0)$ en $x_2=x(t_2)$.} komt de positie $x_1$ op de co\"ordinaatas overeen volgens de formule
 	\begin{eqnarray*}
 	x_1=x(t_1)
 	\end{eqnarray*}
-	Zo zie je in figuur (\ref{grafplaatsfunctie}) een auto op verschillende tijdstippen $t_0,t_1, t_2,\ldots$ weer\-ge\-ge\-ven op verschillende posities. Je ziet ook een grafiek van de bijbehorende plaatsfunctie.
+	In onderstaande figuur (\ref{grafplaatsfunctie}) zie je een auto op verschillende tijdstippen $t_0,t_1, t_2,\ldots$ weer\-ge\-ge\-ven op verschillende posities, met een grafiek van de bijbehorende plaatsfunctie.
 	
 	\begin{image}
-	\hfill
 	\includegraphics[width=0.45\textwidth]{Serway2p1(1)}
-	\hfill
+	$\qquad$   % hack 
 	\includegraphics[width=0.45\textwidth]{Serway2p1(2)}
-	\hfill
-	
 	\end{image}
 	\captionof{figure}{Verschillende posities en de grafiek van de plaatsfunctie}
 	
-	Het verschil tussen twee co\"ordinaten noemen we de \emph{verplaatsing}:
+	Het verschil tussen twee plaatsen (op twee tijdstippen) noemen we de \textbf{verplaatsing}, genoteerd met een $\Delta$ (Delta, een Griekse hoofdletter D  van het Engelse 'displacement' of het Franse 'déplacement'):
 	\[
 	\Delta x = x_2-x_1
 	\]
-	Zo is de verplaatsing van de auto in de figuur tussen de tijdstippen $t_0$ en $t_1$ gelijk aan $\Delta x = x_1-x_0=50\rm\,m-30\rm\,m=20\rm\,m$ en is de verplaatsing tussen de tijdstippen $t_2$ en $t_4$ gelijk aan $\Delta x=x_4-x_2=-40\rm\,m-40\rm\,m=-80\rm\,m$. Deze laatste verplaatsing is negatief, wat aangeeft dat de auto netto naar achteren is bewogen -- tegengesteld aan de zin van de gekozen as.
+	In de figuur is de verplaatsing van de auto tussen de tijdstippen $t_0$ en $t_1$ gelijk aan $\Delta x = x_1-x_0=50\rm\,m-30\rm\,m=20\rm\,m$ en is de verplaatsing tussen de tijdstippen $t_2$ en $t_4$ gelijk aan $\Delta x=x_4-x_2=-40\rm\,m-40\rm\,m=-80\rm\,m$. Deze laatste verplaatsing is negatief, wat aangeeft dat de auto netto naar achteren is bewogen -- tegengesteld aan de zin van de gekozen as.
 	%%%\newline
-	Let op, de verplaatsing hoeft niet noodzakelijk gelijk te zijn aan de \emph{afgelegde weg} tussen de twee bijbehorende tijdstippen. Als je op caf\'e na naar het toilet te zijn geweest terug op je oorspronkelijke plaats op het terras gaat zitten, is je (netto) verplaatsing nul maar heb je wel degelijk afstand afgelegd.
+	Let op, de verplaatsing hoeft niet noodzakelijk gelijk te zijn aan de \textbf{afgelegde weg} tussen de twee bijbehorende tijdstippen. Als je op caf\'e na naar het toilet te zijn geweest terug op je oorspronkelijke plaats op het terras gaat zitten, is je (netto) verplaatsing nul maar heb je wel degelijk afstand afgelegd.
 	
 	\subsection{Gemiddelde snelheid}
 	
