--- a/lambregs_ximera/nwtn_traagheid.tex
+++ b/lambregs_ximera/nwtn_traagheid.tex
@@ -5,7 +5,7 @@
 
 \begin{document}
 	\author{Bart Lambregs}
-	\xmtitle{Inleiding}{}
+	\xmtitle{Eerste beginsel van Newton: traagheid}{}
     \xmsource\xmuitleg
 
 	
