--- a/lambregs_ximera/hrmn_resonantie.tex
+++ b/lambregs_ximera/hrmn_resonantie.tex
@@ -5,7 +5,7 @@
 
 \begin{document}
 	\author{Bart Lambregs}
-	\xmtitle{De mathematische slinger}{}
+	\xmtitle{Resonantie}{}
     \xmsource\xmuitleg
 
 
