--- a/lambregs_ximera/nwtn_derde_beginsel.tex
+++ b/lambregs_ximera/nwtn_derde_beginsel.tex
@@ -5,7 +5,7 @@
 
 \begin{document}
 	\author{Bart Lambregs}
-	\xmtitle{Het derde beginsel van Newton}{}
+	\xmtitle{Derde beginsel van Newton: actie-reactie}{}
     \xmsource\xmuitleg
 
 	% %%%\section{Het derde beginsel van Newton}
