--- a/lambregs_ximera/nwtn_tweede_beginsel.tex
+++ b/lambregs_ximera/nwtn_tweede_beginsel.tex
@@ -5,7 +5,7 @@
 
 \begin{document}
 	\author{Bart Lambregs}
-	\xmtitle{Het tweede beginsel van Newton}{}
+	\xmtitle{Tweede beginsel van Newton: versnelling}{}
     \xmsource\xmuitleg
 
 
