--- a/lambregs.tex
+++ b/lambregs.tex
@@ -44,6 +44,9 @@
 
 \part{De beginselen van Newton}
 
+
+
+
 \activitychapter{lambregs_ximera/nwtn_intro.tex}
 \activitychapter{lambregs_ximera/nwtn_traagheid.tex}
 \activitychapter{lambregs_ximera/nwtn_tweede_beginsel.tex}
@@ -59,6 +62,8 @@
 \activitychapter{lambregs_ximera/grvt_satellietbanen.tex}
 \activitychapter{lambregs_ximera/grvt_gewicht.tex}
 \activitychapter{lambregs_ximera/grvt_zwaartekracht.tex}
+\activitychapter{lambregs_ximera/grvt_wrijving.tex}
+
 
 
 \part{Arbeid en Energie}
