--- a/semester1.tex
+++ b/semester1.tex
@@ -12,7 +12,7 @@
 
 \begin{document}
 %	\setcounter{tocdepth}{2}
-    \xmtitle{Natuurkunde 6de jaar doorstroom}{}  
+    \xmtitle{Natuurkunde 6de jaar doorstroom, eerste semester}{}  
  
 
     
